--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   font-size:18px;
   font-weight:bold;
  
-  box-shadow:0 4px 8px 0 #474747;
+/*   box-shadow:0 4px 8px 0 #474747; */
   padding:5px;
   margin:7px;
   
@@ -17,5 +17,5 @@
 .navLlink:hover{
   color :#ff002b;
   font-size:19px;
-  box-shadow:0 4px 8px 0 #ff002b;
+
 }
